// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar component matches snapshot 1`] = `
<div
  className="sc-htpNat gkzpEH"
/>
`;

exports[`Button component matches snapshot 1`] = `
<button
  className="sc-dnqmqq fSRbzf"
/>
`;

exports[`Layout component matches snapshot 1`] = `
<div
  className="sc-bwzfXH gmciWy"
/>
`;

exports[`List component matches snapshot 1`] = `
<ul
  className="sc-ifAKCX kxovTQ"
/>
`;

exports[`ListItem component matches snapshot 1`] = `
<li
  className="sc-EHOje jJKfMq"
/>
`;

exports[`Page component matches snapshot 1`] = `
<div
  className="sc-bdVaJa cZdAbv"
/>
`;
